<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.detail.DetailMovieActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapse_toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/img_detail_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    tools:background="@drawable/backdrop_alita"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/img_detail_poster"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_detail_backdrop"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="-50dp"
                    android:adjustViewBounds="true"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/poster_alita" />

                <RelativeLayout
                    android:id="@+id/container_rating"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_below="@+id/img_detail_backdrop"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="-35dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/rating_bg">

                    <TextView
                        android:id="@+id/tv_detail_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@android:color/white"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:text="9.6" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/container_rating"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_toEndOf="@+id/img_detail_poster"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_detail_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorText"
                        android:textSize="16sp"
                        tools:text="Alita Battle Angel" />

                    <TextView
                        android:id="@+id/tv_detail_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorTextSecondary"
                        android:textSize="14sp"
                        tools:text="Released time: Nov 22, 2017" />

                    <TextView
                        android:id="@+id/tv_detail_length"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTextSecondary"
                        android:textSize="14sp"
                        tools:text="Length of a film: 109 min" />

                    <TextView
                        android:id="@+id/tv_detail_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTextSecondary"
                        android:textSize="14sp"
                        tools:text="Category" />

                </LinearLayout>

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:navigationIcon="@drawable/ic_navigate_back"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ToggleButton
                    android:id="@+id/btn_fav"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/favorite_selector"
                    android:textOff=""
                    android:textOn="" />

            </RelativeLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/synopsis_title"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_detail_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorTextSecondary"
                android:textSize="14sp"
                tools:text="Synopsis" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>