<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/movieFragment"
        android:icon="@drawable/ic_movie_black"
        android:title="Movies" />
    <item
        android:id="@+id/tvShowFragment"
        android:icon="@drawable/ic_tv_show_black"
        android:title="Tv Shows" />
    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_favorite_black"
        android:title="Favorite" />
</menu>